# prdtools

./: README.rst  requirements-dev.txt  setup.cfg
doc/source/: conf.py  glossary.rst  index.rst
doc/source/reference/: designer.rst  index.rst  math.rst  table.rst
src/prdtools/: __init__.py  __main__.py  bladdon.py  designer.py  math.py  table.py
tests/: conftest.py  test_math.py  test_table.py
tests/data/: prime-numbers.txt
